[package]
name = "dtmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha3 = "0.10.8"
thiserror = "2.0.17"
toml = "0.9.10+spec-1.1.0"
